@@ -1,3 +1,4 @@
+1.1.10-0 @11/13/2006 16:40:00 UTC@
 1.1.9-0 @10/01/2006 21:50:00 UTC@
 1.1.8-0 @08/10/2006 14:30:00 UTC@
 1.1.7-0 @08/03/2006 20:20:00 UTC@
