@@ -137,14 +137,14 @@ bool CorbaRemoteReconfig::configRemove(jccl::ConfigElementPtr element)
    return true;
 }
 
-vpr::ReturnStatus CorbaRemoteReconfig::init()
+bool CorbaRemoteReconfig::init()
 {
-   return vpr::ReturnStatus();
+   return true;
 }
 
-vpr::ReturnStatus CorbaRemoteReconfig::enable()
+bool CorbaRemoteReconfig::enable()
 {
-   return vpr::ReturnStatus();
+   return true;
 }
 
 bool CorbaRemoteReconfig::isEnabled() const
@@ -194,18 +194,19 @@ void CorbaRemoteReconfig::disable()
    mEnabled = false;
 }
 
-vpr::ReturnStatus CorbaRemoteReconfig::startCorba(const std::string& nsHost,
-                                                  const vpr::Uint16 nsPort,
-                                                  const std::string& iiopVer)
+bool CorbaRemoteReconfig::startCorba(const std::string& nsHost,
+                                     const vpr::Uint16 nsPort,
+                                     const std::string& iiopVer)
 {
    // Create new CORBA Manager and initialize it.
    mCorbaManager = new tweek::CorbaManager;
    std::string err_msg("Error occured during initialization");
-   vpr::ReturnStatus status;
+   bool started(true);
 
    try
    {
       int dummy_int(0);
+      vpr::ReturnStatus status;
 
       // Attempt to initialize the CORBA Manager.
       status = mCorbaManager->init("corba_rtrc", dummy_int, NULL, nsHost,
@@ -246,7 +247,7 @@ vpr::ReturnStatus CorbaRemoteReconfig::startCorba(const std::string& nsHost,
                   vprDEBUG_NEXT(jcclDBG_PLUGIN, vprDBG_WARNING_LVL)
                      << "Disabling CORBA remote run-time reconfiguration.\n"
                      << vprDEBUG_FLUSH;
-                  status.setCode(vpr::ReturnStatus::Fail);
+                  started = false;
                }
             }
             else
@@ -280,10 +281,10 @@ vpr::ReturnStatus CorbaRemoteReconfig::startCorba(const std::string& nsHost,
 
       delete mCorbaManager;
       mCorbaManager = NULL;
-      status.setCode(vpr::ReturnStatus::Fail);
+      started = false;
    }
 
-   return status;
+   return started;
 }
 
 void CorbaRemoteReconfig::stopCorba()
