@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Nov-13-2006 patrick     Replaced vpr::ReturnStatus usage with bool in the
+                        jccl::RemoteReconfig interface.
+                        NEW VERSION: 1.1.10
 Oct-01-2006 patrick     Updated for VPR 1.1.35.
                         NEW VERSION: 1.1.9
 Aug-10-2006 patrick     Updated for Boost.Filesystem changes in Boost 1.34.
